[package]
name = "dspa"
version = "0.1.0"
authors = ["Matthew Brookes <mbrookes1304@gmail.com>", "Alexandru Dan <dan.alex97@yahoo.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1"
futures = "0.1"
kafkaesque = {git = "https://github.com/danalex97/timely-dataflow" }
rand = "0.6"
rdkafka = "0.14.0"
timely = {git = "https://github.com/danalex97/timely-dataflow" }
clap = "2.31.2" 
