[package]
name = "dspa"
version = "0.1.0"
authors = ["Matthew Brookes <mbrookes1304@gmail.com>", "Alexandru Dan <dan.alex97@yahoo.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.31.2"
csv = "1"
futures = "0.1"
kafkaesque = {git = "https://github.com/danalex97/timely-dataflow" }
rand = "0.6"
rdkafka = "0.14.0"
serde = "1.0.90"
serde_derive = "1.0.90"
timely = {git = "https://github.com/danalex97/timely-dataflow" }
timely_communication = {git = "https://github.com/danalex97/timely-dataflow" }

[features]
bincode= ["timely_communication/bincode"]
